<resources>
    <string name="app_name">BloodSpotter</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="search_hint">Search</string>

    <string name="menu_home">Home</string>
    <string name="menu_profile">View My Profile</string>
    <string name="menu_facts">Blood Donation Facts</string>
    <string name="menu_about">About Us</string>
    <string name="menu_share">Refer the App</string>
    <string name="menu_info">Info</string>
    <string name="menu_rate_us">Rate Us</string>
    <string name="menu_privacy_policy">Privacy Policy</string>
    <string name="share">Download this App.</string>
    <string name="err_name">Should not be Empty!</string>

    <string-array name="blood_group_list">
        <item>AB+ve</item>
        <item>AB-ve</item>
        <item>A+ve</item>
        <item>B+ve</item>
        <item>O+ve</item>
        <item>A-ve</item>
        <item>B-ve</item>
        <item>O-ve</item>
    </string-array>

    <string-array name="country_list">
        <item>Canada</item>
    </string-array>

</resources>
