<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_pkt_home_line"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/ic_pkt_search_line"
            android:title="@string/action_search" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_pkt_profile_line"
            android:title="@string/menu_profile" />
        <item
            android:id="@+id/nav_facts"
            android:icon="@drawable/ic_pkt_discover_line"
            android:title="@string/menu_facts" />
        <item
            android:id="@+id/nav_info"
            android:icon="@drawable/ic_info_outline_black_24dp"
            android:title="@string/menu_info" />
    </group>

    <item android:title="Communicate">
        <menu>
            <!--<item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_rate_us"
                android:icon="@drawable/ic_rate_review_black_24dp"
                android:title="@string/menu_rate_us" />
            <item
                android:id="@+id/nav_privacy"
                android:icon="@drawable/file"
                android:title="@string/menu_privacy_policy" />-->
        </menu>
    </item>

</menu>
