<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">

    <include
        layout="@layout/app_bar_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

  <!--  < com.rom4ek.arcnavigationview.ArcNavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="right|left"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/nav_header_main"
        app:menu="@menu/activity_main_drawer" />
-->

    <!--  <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_menu_share"
            android:text="Refer the App"
            android:drawableTint="@color/colorPrimary"
            android:textColor="#000"
            android:layout_marginTop="500dp"/>-->
    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@color/white"
        android:fitsSystemWindows="true"
        app:itemIconTint="@color/colorPrimary"
        app:headerLayout="@layout/nav_header_main"
        app:menu="@menu/activity_main_drawer"
       >


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/menu_share"
            android:drawableLeft="@drawable/ic_menu_share"
            android:drawableTint="@color/colorPrimary"
            android:drawablePadding="30dp"
            android:id="@+id/txtshare"
            android:padding="10dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="455dp"
            android:textColor="#000"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/menu_rate_us"
            android:drawableLeft="@drawable/ic_rate_review_black_24dp"
            android:drawableTint="@color/colorPrimary"
            android:drawablePadding="30dp"
            android:id="@+id/txtrate"
            android:padding="10dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="490dp"
            android:textColor="#000"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/menu_privacy_policy"
            android:drawableLeft="@drawable/ic_description_black_24dp"
            android:drawableTint="@color/colorPrimary"
            android:drawablePadding="30dp"
            android:id="@+id/txtprivacy"
            android:padding="10dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="525dp"
            android:textColor="#000"/>




    </com.google.android.material.navigation.NavigationView>



</androidx.drawerlayout.widget.DrawerLayout>
